Load CodeGenProvider services once instead of once per module